css/theme.css
/* ... */
.main-wrapper header > ul > li.my-account.active > a:after, .main-wrapper header > ul > li.my-account.open > a:after{border-bottom-color:#999999; }

/* ================================*/
/* Root Menu Dropdown Css          */
/* ================================*/

.main-wrapper header > ul > li .dropdown-menu {
  width: 100%;
  border-radius: 0;
  margin: 0;
  border:none;
  border-top: 2px solid #999;
}


/* ========================*/
/* Page Title Css          */
/* ========================*/

.page-title {
  background: #404040;
  margin: 0;
  padding: 20px 0 20px 30px;
}
.page-title h1 {
  margin: 0;
  font-family: "RobotoThin", sans-serif;
  font-weight: 100;
  font-size: 36px;
  color: #fff;
  width: 60%;
  float: left;
}

/* ========================*/
/* Main Content Css       */
/* ========================*/

.main-content {
  display: table;
  width: 100%;
  min-height: 600px;
}
.main-content p {
  color: #7a7474;
  font-size: 15px;
  line-height: 26px;
}




/* ============================*/
/* Sidebar Menu Css                 */
/* ============================*/

.main-content aside {
  display: table-cell;
  margin: 0;
  padding: 0;
  height: 800px;
  width: 20%;
  border-right: 1px solid #ddd;
  border-right: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 1px 0 0 rgba(255, 255, 255, 0.1);
  background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 67%, rgba(0, 0, 0, 0.03) 100%);
  background: -webkit-gradient(linear, left top, right top, color-stop(67%, rgba(255, 255, 255, 0)), color-stop(100%, rgba(0, 0, 0, 0.03)));
  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 67%, rgba(0, 0, 0, 0.03) 100%);
  background: -ms-linear-gradient(left, rgba(255, 255, 255, 0) 67%, rgba(0, 0, 0, 0.03) 100%);
  background: linear-gradient(to right, rgba(255, 255, 255, 0) 67%, rgba(0, 0, 0, 0.03) 100%);
  position: relative;
}
.main-content aside ul.left_nav {
  margin: 0;
  padding: 20px 0 20px 20px;
  display: block;
  font-size: 17px;
  font-weight: bold;
  list-style: none ;
  z-index: 999;
}
.main-content aside ul.left_nav > li {
  clear: both;
  padding: 5px 0;
  position: relative;
  right: -1px;
  margin-bottom: 5px;
  border: 1px solid transparent;
}
.main-content aside ul.left_nav > li > a {
  display: block;
  font-size: 15px;
  color: #686868;
  padding: 12px 15px 8px 50px;
  font-weight: bold;
}
.main-content aside ul.left_nav > li > a i {
  content: ' ';
  position: absolute;
  width: 50px;
  height: 50px;
  display: block;
  background-position: 0 0;
  left: 0;
  top: 10px;
  z-index: 1;
  background-image: url(../img/cube_sprite.png);
  background-repeat: no-repeat;
}
.main-content aside ul.left_nav > li > a i.coi-cloud {
  background-position: 0 0;
}
.main-content aside ul.left_nav > li > a i.coi-network {
  background-position: 0 -200px;
}
.main-content aside ul.left_nav > li > a i.coi-gateway {
  background-position: 0 -100px;
}
.main-content aside ul.left_nav > li > a i.coi-server {
  background-position: 0 -400px;
}
.main-content aside ul.left_nav > li > a i.coi-system {
  background-position: 0 -500px;
}
.main-content aside ul.left_nav > li > a i.coi-reports {
  background-position: 0 -300px;
}
.main-content aside ul.left_nav > li > a:hover {
  text-decoration: none;
  outline: none;
  color: #608921;
  background: none;
}
.main-content aside ul.left_nav > li > a:focus {
  text-decoration: none;
  outline: none;
  color: #608921;
  background: none;
}
.main-content aside ul.left_nav > li.active {
  border-radius: 5px 0 0 5px;
  border-color: #ddd;
  border-right-color: #fff;
  background: #fff;
}
.main-content aside ul.left_nav > li.active .coi-cloud {
  background-position: right 0;
}
.main-content aside ul.left_nav > li.active .coi-network {
  background-position: right -200px;
}
.main-content aside ul.left_nav > li.active .coi-gateway {
  background-position: right -100px;
}
.main-content aside ul.left_nav > li.active .coi-server {
  background-position: right -400px;
}
.main-content aside ul.left_nav > li.active .coi-system {
  background-position: right -500px;
}
.main-content aside ul.left_nav > li.active .coi-reports {
  background-position: right -300px;
}
.main-content aside ul.left_nav > li.active > a {
  color: #608921;
}
.main-content aside ul.left_nav > li.active .sub_menu:before {
  display: none;
}
section.content-container {
  display: table-cell;
  padding: 20px;
  min-height: 500px;
  vertical-align: top;
}



/* ============================================= */
/* Stickey Header Css                            */
/* ============================================= */

#mainheader_sticky.is-sticky header {
  background: #fff;
}
#mainheader_sticky.is-sticky header > ul > li:first-child,
#mainheader_sticky.is-sticky header > ul > li:last-child {
  border-radius: 0;
}
#mainheader_sticky.is-sticky header > ul > li > a {
  padding: 5px 20px;
  min-height: 64px;
}
#mainheader_sticky.is-sticky header > ul > li > a i:before {
  height: 44px;
  line-height: 42px;
  width: 44px;
}
#mainheader_sticky.is-sticky header > ul > li > a.ci-ClearOS:before {
  line-height: 0;
  content: "\e611";
  font-size: 49px;
  top: -8px;
}
#magic-arrow {
  height: 0;
  font-size: 0;
  color: transparent;
  position: absolute;
  bottom: 0;
  width: 0 !important;
  border: 5px solid transparent;
  border-bottom-color: #000;
  margin-left: 123px;
  content: ' ';
  display: none;
}
/* TODO BELOW */
header:hover #magic-arrow {
  display: block;
}
#magic-arrow.magic_arrow_0 {
  border-bottom-color: #686868;
}
#magic-arrow.magic_arrow_1 {
  border-bottom-color: #608921;
}
#magic-arrow.magic_arrow_2 {
  border-bottom-color: #c2510f;
}
#magic-arrow.magic_arrow_3 {
  border-bottom-color: #3d85c6;
}
#magic-arrow.magic_arrow_4 {
  border-bottom-color: #999999;
}
#mainheader_sticky.is-sticky header {
  background: #fff;
}
#mainheader_sticky.is-sticky header > ul > li:first-child,
#mainheader_sticky.is-sticky header > ul > li:last-child {
  border-radius: 0;
}
/* ... */

